--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,9 +7,9 @@ server{
 
 	ssl_protocols TLSv1.2 TLSv1.3;
 
-	root /usr/share/nginx/html;
-	index index.html;
-	server_name localhost;
+	root /var/www/html;
+
+	server_name _;
 
 	location / {
 		try_files $uri $uri/ =404;
