--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,14 +2,13 @@ server{
 	listen 433 ssl;
 	listen [::]:433 ssl;
 
-	ssl_certificate /etc/ssl/certs/nginx-inception_selfsigned.crt
-	ssl_certificate_key /etc/ssl/private/nginx_inception.key
-
-	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/nginx/ssl/nginx.crt
+	ssl_certificate_key /etc/nginx/ssl/nginx.key
+	
+	ssl_protocols	TLSv1.2 TLSv1.3;
 
 	root /var/www/html;
-
-	server_name _;
+	server_name mbartsch.42.fr;
 
 	location / {
 		try_files $uri $uri/ =404;
