--- a/inception_two/docker-compose.yml
+++ b/inception_two/docker-compose.yml
@@ -1,41 +1,64 @@
+
 services:
 
   # nginx
   nginx:
     container_name: nginx
     build:     
-      context: ./requirements/nginx/.
-      dockerfile: nginx.Dockerfile
+     context: ./requirements/nginx/.
+     dockerfile: nginx.Dockerfile
     ports:
-      - 80:80
+      - '443:443'
+    expose:
+      - '443'
     volumes:
-      - ./requirements/wordpress:/var/www/php
+      - wp_data:/var/www/html
     depends_on:
       - wordpress
+    networks:
+      - inception
     restart: always
 
   # wordpress
   wordpress:
     container_name: wordpress
     build: 
-      context: ./requirements/wordpress/.
+      context: ./requirements/wordpress
       dockerfile: wordpress.Dockerfile
-    working_dir: /var/www/php
+    env_file: .env
     volumes:
-      - ./requirements/wordpress/website:/var/www/php
+      - wp_data:/var/www/html
     depends_on:
       - mariadb
+    networks:
+      - inception
     restart: always
 
-  # mariadb
+      # mariadb
   mariadb:
     container_name: mariadb
     build:
-      context: ./requirements/mariadb/.
+      context: ./requirements/mariadb
       dockerfile: mariadb.Dockerfile
+    env_file: .env
     environment:
       MYSQL_DATABASE: wp
       MYSQL_USER: wp
       MYSQUL_PASSWORD: secret
       MYSQL_ROOT_PASSWORD: secret
+    volumes:
+      - md_data:/var/lib/mysql
+    networks:
+      - inception
     restart: always
+
+volumes:
+    md_data:
+      driver: local
+    wp_data:
+      driver: local
+
+networks: 
+    inception:
+      driver: bridge
+
