--- a/inception_two/requirements/nginx/conf/nginx-custom.conf
+++ b/inception_two/requirements/nginx/conf/nginx-custom.conf
@@ -1,10 +1,4 @@
-server {
-	listen		80;
-	server_name	inception;
-	return		301 https://$host$request_uri;
-}
-
-server {
+	server {
 	listen 		443 ssl;
 	listen		[::]:443 ssl;
 
@@ -14,17 +8,18 @@ server {
 	ssl_certificate_key	/etc/nginx/ssl/nginx.key;
 	ssl_protocols		TLSv1.2 TLSv1.3;
 
-	root /var/www/php;
+	root /var/www/html;
 	index index.php index.html index.htm;
 
 	location ~ \.php$ {
 		fastcgi_pass	wordpress:9000;
 		fastcgi_index	index.php;
-		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		include 	fastcgi_params;
+		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
 	}
 
 	location / {
 		try_files $uri $uri/ =404;
 	}
-}
+	}
