--- a/inception_two/requirements/nginx/conf/nginx-custom.conf
+++ b/inception_two/requirements/nginx/conf/nginx-custom.conf
@@ -1,5 +1,5 @@
 	server {
-	listen 		443 ssl;
+	listen 		443;
 	listen		[::]:443 ssl;
 
 	server_name	mbartsch.42.fr;
@@ -20,6 +20,6 @@
 	}
 
 	location / {
-		try_files $uri $uri/ =404;
+		try_files $uri $uri/ index.php$is_args$args;
 	}
 	}
