--- a/inception_two/requirements/mariadb/conf/my.cnf
+++ b/inception_two/requirements/mariadb/conf/my.cnf
@@ -1,8 +1,8 @@
 [mysqld]
 
 user            = mysql
-pid-file        = /var/run/mysqld/mysqld.pid
-socket          = /var/run/mysqld/mysqld.sock
+pid-file        = /run/mysqld/mysqld.pid
+socket          = /run/mysqld/mysqld.sock
 port            = 3306
 basedir         = /usr
 datadir         = /var/lib/mysql
@@ -14,5 +14,5 @@ default_storage_engine  = InnoDB
 bind-address	= 0.0.0.0
 log_error	=/var/lib/mysql/mysql.err
 
-[client]
-socket		= /var/run/mysqld/mysqld.sock
+innodb=ON
+innodb_file_per_table=1
