--- a/inception_two/.env
+++ b/inception_two/.env
@@ -1,8 +1,18 @@
+# is set to localhost in /etc/hosts
+DOMAIN_NAME=mbartsch.42.fr
 
-DOMAIN_NAME=mabrtsch.42.fr
-
-MYSQL_HOSTNAME=mariadb
-MY_SQLDATABASE=wordpress
-MY_SQLUSER=mbartsch
-MY_SQLPASSWORD=12345
+# MariaDB
+MYSQL_DATABASE=wordpress
+MYSQL_USER=user
+MYSQL_PASSWORD=user123
 MYSQL_ROOT_PASSWORD=root123
+MYSQL_PORT= 3306
+MYSQL_ADDRESS= 0.0.0.0
+
+# Wordpress
+WP_TITLE= inception
+WP_USER=user
+WP_USER_PASSWORT=user123
+WP_MAIL= mbartsch@student.42berlin.de
+MYSQL_HOST= mariadb
+WP_PATH= /var/www/html
