--- a/inception_two/requirements/mariadb/conf/my.cnf
+++ b/inception_two/requirements/mariadb/conf/my.cnf
@@ -7,12 +7,16 @@ port            = 3306
 basedir         = /usr
 datadir         = /var/lib/mysql
 tmpdir          = /tmp
-lc_messages_dir = /usr/share/mysql
-lc_messages     = en_US
 skip-external-locking
-default_storage_engine  = InnoDB
 bind-address	= 0.0.0.0
 log_error	=/var/lib/mysql/mysql.err
+ 
+# default_storage_engine  = InnoDB
+#innodb=ON
+#innodb_file_per_table=1
 
-innodb=ON
-innodb_file_per_table=1
+[client]
+port		= 3306
+
+[server]
+init_file = /usr/local/bin/init.sql
