--- a/inception_two/requirements/wordpress/conf/php.conf
+++ b/inception_two/requirements/wordpress/conf/php.conf
@@ -8,7 +8,8 @@ include = /etc/php8/php-fpm.d/*.conf
 user = nginx
 group = nginx
 
-listen = 90000
+listen = wordpress
+port = 9000
 
 pm = dynamic
 pm.max_children = 5
