--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,1 +1,23 @@
+# Server name and address
+DOMAIN_NAME= mbartsch.42.fr
 
+# wordpress
+WORDPRESS_PATH= /var/www/html
+WORDPRESS_TITLE= inception
+WORDPRESS_USER= wpuser
+WORDPRESS_PASSWORD= wpuser123
+WORDPRESS_MAIL= mbartsch@student.42berlin.de
+
+# MYSQL
+MYSQL_DATABASE= wordpress
+MYSQL_USER= wpuser
+MYSQL_PASSWORD= wpuser123
+MYSQL_HOST= mariadb
+MYSQL_ROOT_PASSWORD=root123
+
+# php
+PHP_PORT= 9000
+
+# openssl
+SSL_CERT= /etc/nginx/ssl/nginx-ssl.crt
+SSL_KEY= /etc/nginx/ssl/nginx-ssl.key
