erster bonus fin

--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -27,6 +27,9 @@ services:
         - 9000:9000
       volumes:
         - wordpress:/var/www/html
+      depends_on:
+      - mariadb
+      - redis
       networks:
         - inception
       restart: always
@@ -46,7 +49,18 @@ services:
       - inception
     restart: always
 
-
+  redis:
+    container_name: redis
+    build:
+      context: requirements/bonus/redis
+      dockerfile: redis.dockerfile
+    env_file:
+      - .env
+    ports:
+      - 6379:6379
+    networks:
+      - inception
+    restart: always
 
 volumes:
 
