--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -13,10 +13,15 @@ MYSQL_DATABASE= wordpress
 MYSQL_USER= wpuser
 MYSQL_PASSWORD= wpuser123
 MYSQL_HOST= mariadb
-MYSQL_ROOT_PASSWORD=root123
+MYSQL_ROOT_PASSWORD= root123
 
 # php
 PHP_PORT= 9000
+
+# redis
+REDIS_NAME= redis-cache
+REDIS_HOST= redis
+REDIS_PORT= 6379
 
 # openssl
 SSL_CERT= /etc/nginx/ssl/nginx-ssl.crt
