--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,12 +1,19 @@
 # Server name and address
 DOMAIN_NAME= mbartsch.42.fr
 
+# openssl
+SSL_CERT= /etc/nginx/ssl/nginx-ssl.crt
+SSL_KEY= /etc/nginx/ssl/nginx-ssl.key
+
 # wordpress
 WORDPRESS_PATH= /var/www/html
 WORDPRESS_TITLE= inception
-WORDPRESS_USER= wpuser
-WORDPRESS_PASSWORD= wpuser123
-WORDPRESS_MAIL= mbartsch@student.42berlin.de
+WORDPRESS_ADMIN_USER= wpuser
+WORDPRESS_ADMIN_PASSWORD= wpuser123
+WORDPRESS_ADMIN_MAIL= mbartsch@student.42berlin.de
+WORDPRESS_USER_USER= user
+WORDPRESS_USER_PASSWORD= user123
+WORDPRESS_USER_MAIL= foo@bar.com
 
 # MYSQL
 MYSQL_DATABASE= wordpress
@@ -23,6 +30,7 @@ REDIS_NAME= redis-cache
 REDIS_HOST= redis
 REDIS_PORT= 6379
 
-# openssl
-SSL_CERT= /etc/nginx/ssl/nginx-ssl.crt
-SSL_KEY= /etc/nginx/ssl/nginx-ssl.key
+# ftp
+FTP_HOST= ftp
+FTP_USER= ftpuser
+FTP_PASS= ftpuser123
