--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - wordpress:/var/www/html
     depends_on:
       - wordpress
+      - static
     networks:
       - inception
     restart: always
@@ -23,13 +24,10 @@ services:
         context: requirements/wordpress
         dockerfile: wordpress.dockerfile
       env_file: .env
-      ports:
-        - 9000:9000
       volumes:
         - wordpress:/var/www/html
       depends_on:
       - mariadb
-      - redis
       networks:
         - inception
       restart: always
@@ -41,8 +39,6 @@ services:
       dockerfile: mariadb.dockerfile
     env_file:
       - .env
-    ports:
-      - 3306:3306
     volumes:
       - mariadb:/var/lib/mysql
     networks:
@@ -56,8 +52,69 @@ services:
       dockerfile: redis.dockerfile
     env_file:
       - .env
+    volumes:
+      - wordpress:/var/www/html
+    depends_on:
+      - wordpress
+    networks:
+      - inception
+    restart: always
+
+  ftp:
+    container_name: ftp
+    build: 
+       context: requirements/bonus/ftp
+       dockerfile: ftp.dockerfile
+    env_file:
+        - .env
     ports:
-      - 6379:6379
+        - "21:21"
+    volumes:
+        - wordpress:/var/www/html
+    depends_on:
+      - wordpress
+    networks:
+      - inception
+    restart: always
+
+  adminer:
+    container_name: adminer
+    build:
+      context: requirements/bonus/adminer
+      dockerfile: adminer.dockerfile
+    depends_on:
+      - mariadb
+    networks:
+      - inception
+    restart: always
+
+  static:
+    container_name: static
+    build:
+      context: requirements/bonus/static
+      dockerfile: static_website.dockerfile
+    networks:
+      - inception
+    restart: always
+
+  prometheus:
+    container_name: prometheus
+    build:
+      context: requirements/bonus/monitor/prometheus
+      dockerfile: prometheus.dockerfile
+    depends_on:
+      - node-exporter
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
+
+  node-exporter:
+    container_name: node-exporter
+    build:
+      context: requirements/bonus/monitor/node_exporter
+      dockerfile: node_exporter.dockerfile
     networks:
       - inception
     restart: always
@@ -79,6 +136,14 @@ volumes:
       type: none
       device: /home/mo/data/mariadb
       o: bind
+
+  #docker_data:
+  #  name: docker_data
+  #  driver: local
+  #  driver_opts:
+  #    type:   none
+  #    device: /var/run/docker.sock
+  #    o: bind
 
 networks:
   inception:
