--- a/src/requirements/bonus/static/conf/busybox.conf
+++ b/src/requirements/bonus/static/conf/busybox.conf
@@ -1,5 +1,5 @@
 CONFIG_HTTPD=y
-CONFIG_FEATURE_HTTPD_PORT_DEFAULT=80
+#CONFIG_FEATURE_HTTPD_PORT_DEFAULT=80
 # CONFIG_FEATURE_HTTPD_RANGES is not set
 # CONFIG_FEATURE_HTTPD_SETUID is not set
 CONFIG_FEATURE_HTTPD_BASIC_AUTH=y
